--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     compileOnly 'org.projectlombok:lombok'
     implementation 'com.h2database:h2:2.1.214'
     annotationProcessor 'org.projectlombok:lombok'
