--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.6'
     id 'io.spring.dependency-management' version '1.1.0'
-    id("com.ryandens.javaagent-application") version "0.4.2"
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -20,7 +20,6 @@ dependencies {
     implementation 'com.h2database:h2:2.1.214'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    javaagent("io.opentelemetry.javaagent:opentelemetry-javaagent:1.11.1")
 }
 
 test {
