--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
