--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id 'org.springframework.boot' version '2.7.6'
     id 'io.spring.dependency-management' version '1.1.0'
 }
+apply plugin: 'war'
+apply plugin: 'application'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
-sourceCompatibility = 1.8
 
 configurations {
     compileOnly {
